<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="button">Button</string>
    <string name="lock">Lock</string>
    <string name="infos_user">null</string>
    <string name="placeholder_button">Confirm</string>
    <string name="unlock">unlock</string>
    <string name="add">add</string>
    <string name="gps">GPS</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="ulck">ULCK</string>
    <string name="lck">LCK</string>
    <string name="adresse">Adresse</string>
    <string name="textview">TextView</string>
</resources>
