<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    style="@style/Base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <ToggleButton
                android:id="@+id/lock_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:checked="false"
                android:text="@string/togglebutton"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textOff="@string/ulck"
                android:textOn="@string/lck"
                android:visibility="visible" />

            <Button
                android:id="@+id/placeholder_test"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/design_default_color_primary"
                android:baselineAligned="false"
                android:text="@string/placeholder_button"
                tools:text="Confirm" />

            <Button
                android:id="@+id/gps_button"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:baselineAligned="false"
                android:elevation="0dp"
                android:text="@string/gps"
                tools:text="GPS" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/infos_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infos_user"
            android:textSize="12sp" />

    </LinearLayout>

    <com.google.android.gms.samples.vision.ocrreader.ui.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="527dp"
        android:baselineAligned="false">

        <com.google.android.gms.samples.vision.ocrreader.ui.camera.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.gms.samples.vision.ocrreader.ui.camera.CameraSourcePreview>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/add" />

</LinearLayout>
